...
    NetworkHandlerEditProfile data = NetworkHandlerEditProfile();
    dynamic datadb =
        await data.getdata(widget.stringid, context, widget.status);
    var decodeData = datadb;

    setState(() {
      name = decodeData['name'];
      city = decodeData['city'];
      address = decodeData['address'];
      password = decodeData['password'];
    });
  }

  @override
  Widget build(BuildContext context) {
    assert(debugCheckHasMediaQuery(context));
...
                          address: address,
                          password: password,
                        ),
                        withNavBar: true, // OPTIONAL VALUE. True by default.
                      );
                    },
                    child: Text("Edit Profile",
                    style: TextStyle(
                      color: kPrimaryLightColor
                    ),
                    ))
              ],
            ),
...
              //   },
              // ),
              ListTile(
                leading: Icon(Icons.payments_outlined,
                color: kPrimaryColor,),
                title: const Text(
                  'Track Expenses',
                  style: TextStyle(fontSize: 16,color: kPrimaryColor),
                ),
                onTap: () {
                  // Update the state of the app
                  // ...
                  // Then close the drawer
...
                  );
                },
              ),
              ListTile(
                leading: Icon(FontAwesomeIcons.dollarSign,color: kPrimaryColor,),
                title: const Text(
                  'Currency Converter',
                  style: TextStyle(fontSize: 16,color: kPrimaryColor),
                ),
                onTap: () {
                  // Update the state of the app
                  // ...
                  // Then close the drawer
...
