...
      for (final i in expences) {
        productMap = {
          // "id": index,
          //     "title": "Name ",
          //     "subtitle": "This is the subtitle $index"
          'id': i['_id'],
          'description': i['description'],
          'income': i['income'],
          'expense': i['expense'],
        };

        dataingetdata.add(productMap);
      }
...
                      Row(
                        children: [
                          Expanded(
                            child: Form(
                              key: _formKey,
                              child: TextFormField(
                                key: ValueKey("amount"),
                                keyboardType: TextInputType.number,
                                cursorColor: kPrimaryColor,
                                decoration: InputDecoration(
                                    hintText: 'Enter Amount',
                                    focusedBorder: OutlineInputBorder(
                                      borderSide: const BorderSide(
...
                        onPressed: () {
                          Navigator.of(context).pop();
                        },
                      ),
                      MaterialButton(
                        color: kPrimaryColor,
                        child: Text('Enter',
                            style: TextStyle(color: Colors.white)),
                        onPressed: () async {
                          var id = widget.userid;
                          String value = _textcontrollerAMOUNT.text;
                          String description = _textcontrollerITEM.text;
                          http.Response response = await http.post(
...
